# website-collect-bot

./: .env.example  .gitignore  AGENTS.md  README.md  deploy.sh  pyproject.toml
data/: sites.sqlite3
docs/: deploy.md
scripts/: commit_sqlite_to_github.sh  import_telegram_html.py
src/website_collect_bot/: __init__.py  bot.py  config.py  deepseek.py  extract.py  intent.py  main.py  models.py  storage.py  web.py  web_main.py
tests/: test_bot_grouping.py  test_extract.py  test_natural_language.py  test_status.py  test_storage.py  test_web.py
