[project]
name = "website-collect-bot"
version = "0.1.0"
description = "Telegram bot for collecting, summarizing, and tracking website processing status from group chats."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/website_collect_bot"]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
]

[project.scripts]
website-collect-bot = "website_collect_bot.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
